src/objects/ITOP_Device_Type__c.object
<CustomObject>
    <description>type of device supported by IT On Point and Eli Lilly, including tablet, smart phone, wearable, etc.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description to display to User</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>Insert Image to go accompany this Device Type in the application.</inlineHelpText>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <description>Image URL</description>
        <label>Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ITOP Device Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP_Device_Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Device Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>